--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -25,10 +25,10 @@ jobs:
           ### content
           SHOW_TITLE: true # optional
           SECTION_NAME: waka # optional
-          BLOCKS: -> # optional
+          BLOCKS: ◻️◻️️◼️◼️◼️ # optional
           CODE_LANG: text # optional
-          TIME_RANGE: all_time # optional
-          LANG_COUNT: 10 # optional
+          TIME_RANGE: last_year # optional
+          LANG_COUNT: 8 # optional
           SHOW_TIME: true # optional
           SHOW_TOTAL: true # optional
           SHOW_MASKED_TIME: false # optional
