--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -25,9 +25,9 @@ jobs:
           ### content
           SHOW_TITLE: true # optional
           SECTION_NAME: waka # optional
-          BLOCKS: ◻️◻️️◼️◼️◼️ # optional
+          BLOCKS: [▓▓▓▓▓▓░░░░░░░░░░░░░░] # optional
           CODE_LANG: text # optional
-          TIME_RANGE: last_year # optional
+          TIME_RANGE: last_30_days # optional
           LANG_COUNT: 8 # optional
           SHOW_TIME: true # optional
           SHOW_TOTAL: true # optional
