--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -21,13 +21,13 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }} # required
           ### content
-          SHOW_TITLE: true # optional
+          # SHOW_TITLE: true # optional
           SECTION_NAME: waka # optional
-          BLOCKS: ░░░░░░░░░▓▓▓▓▓▓ # optional
+          BLOCKS: ○○○○●●●●●●●● # optional
           CODE_LANG: text # optional
-          TIME_RANGE: last_30_days # optional
-          LANG_COUNT: 8 # optional
+          TIME_RANGE: last_7_days # optional
+          LANG_COUNT: 10 # optional
           SHOW_TIME: true # optional
-          SHOW_TOTAL: true # optional
+          # SHOW_TOTAL: true # optional
           SHOW_MASKED_TIME: false # optional
           STOP_AT_OTHER: true # optional
