--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -24,7 +24,7 @@ jobs:
           # SHOW_TITLE: true # optional
           SECTION_NAME: waka # optional
           BLOCKS: ○○○○●●●●●●●● # optional
-          CODE_LANG: python # optional
+          CODE_LANG: Go # optional
           TIME_RANGE: last_7_days # optional
           LANG_COUNT: 8 # optional
           SHOW_TIME: true # optional
