--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -23,7 +23,7 @@ jobs:
           ### content
           # SHOW_TITLE: true # optional
           SECTION_NAME: waka # optional
-          BLOCKS: ○○○○●●●●●●●● # optional
+          BLOCKS: ┈┈┈┈┈▬▬▬▬▬ # optional
           CODE_LANG: rust # optional
           TIME_RANGE: last_7_days # optional
           LANG_COUNT: 8 # optional
